Fix pane overflow bug.

--- a/js/entry-points/panel.css
+++ b/js/entry-points/panel.css
@@ -33,7 +33,7 @@ body {
 
 #graph {
   overflow: hidden;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   left: 0;
   right: 0;
